fixed side bar's border clipping. Closes #1

--- a/srv/static/main.css
+++ b/srv/static/main.css
@@ -79,6 +79,7 @@ ol li{
 }
 
 .right-content{
+    padding: 2%;
     width: 30%;
     text-align: center;
 }
@@ -100,6 +101,7 @@ img{
 }
 
 .sidebar{
+    width: 100%;
     padding: 2%;
     margin-top: 20%;
     border: 0.5px solid rgb(197, 197, 197);
@@ -109,7 +111,6 @@ img{
     flex-direction: column;
     transition: transform 0.3s ease;
 }
-
 .sidebar:hover{
     transform: translateY(-5px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -182,7 +183,6 @@ input[type="number"]::-webkit-inner-spin-button {
 
 @media (max-width: 1600px) {
     .sidebar{
-        padding: 5%; /* Increase padding for better readability */
         margin-top: 10%; /* Reduce the top margin */
         width: 90%; /* Make the sidebar take up 90% of the screen width */
         margin-left: auto;
@@ -207,7 +207,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 @media (max-width: 1300px) {
     .map {
-        width: 90%; /* Make the container width more responsive on tablets */
+        width: 80%; /* Make the container width more responsive on tablets */
         padding: 15px; /* Adjust padding for smaller screens */
     }
 
@@ -253,6 +253,10 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 700px) {
+
+    .map {
+        width: 90%; 
+    }
 
     h1{
         font-size: 22px;
